now use java 11 image print GC logs More memory to DirectBuffer for java.nio